notification-service/k8/k8.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: notification-service-deployment
  labels:
    app: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: registry.cloud.sdu.dk/sdu-cloud/notification-service:1.2.6
        livenessProbe:
          httpGet:
            port: 8080
            path: /status
          initialDelaySeconds: 3
          periodSeconds: 30
          failureThreshold: 5
        command:
        - /opt/service/bin/service
        - --config-dir
        - /etc/psql
        - --config-dir
        - /etc/refresh-token
        - --config-dir
        - /etc/token-validation
        volumeMounts:
        - mountPath: /etc/psql
          name: psql-secrets
        - mountPath: /etc/refresh-token
          name: refresh-token
        - mountPath: /etc/token-validation
          name: token-validation
      volumes:
      - name: psql-secrets
        secret:
          optional: false
          secretName: notification-psql
      - name: refresh-token
        secret:
          secretName: notification-refresh-token
      - name: token-validation
        configMap:
          name: token-validation




      imagePullSecrets:
        - name: esci-docker
